--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3'
 services:
   app:
     environment: 
-      CHOKIDAR_USEPOLLING: "true"
+      - CHOKIDAR_USEPOLLING="true"
+      - KEY_TO_API=${KEY}
     build:
       dockerfile: Dockerfile
       context: ./app
