--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ioredis": "^4.26.0",
-    "mongoose": "^5.12.4"
+    "mongoose": "^5.12.4",
+    "npm": "^10.8.0"
   }
 }
