--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "redux-api-middleware": "^3.2.1",
     "redux-devtools-extension": "^2.13.9",
